<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nrdzs.cs465.illinois.edu.spot.DetailedPhotoActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/detailed_photo_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/icon_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/bluePrimary"/>


    <Button
        android:id="@+id/next_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#00ffffff"

        android:text="@string/icon_arrow_right"
        android:textSize="50dp"
        android:textColor="@color/bluePrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prev_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="#00ffffff"
        android:text="@string/icon_arrow_left"
        android:textSize="50dp"
        android:textColor="@color/bluePrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
