<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nrdzs.cs465.illinois.edu.spot.ConfirmPhotoLocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF">


        <TextView
            android:id="@+id/select_floor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_floor"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/illiniBlue"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floor_spinner"
            android:gravity="center"
            android:layout_below="@id/select_floor_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        </Spinner>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/illiniBlue"
            android:layout_alignBottom="@+id/floor_spinner"
            android:paddingTop="30dp">
        </View>

        <TextView
            android:id="@+id/floor_place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_place_text"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/floor_spinner"
            android:textSize="18sp"
            android:textColor="@color/illiniBlue"/>

        <ImageView
            android:id="@+id/background_img"
            android:contentDescription="@string/floor_place_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/floorplan"
            android:layout_below="@id/floor_place_text"
            android:padding="10dp"/>

        <RadioGroup
            android:id="@+id/floor_radio"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/floor_place_text"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/left_butt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:button="@drawable/left_side"
                android:layout_weight="1"
                android:onClick="onButtTouched"/>
            <RadioButton
                android:id="@+id/center_butt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:button="@drawable/left_side"
                android:layout_weight="1"
                android:onClick="onButtTouched"/>
            <RadioButton
                android:id="@+id/right_butt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:button="@drawable/left_side"
                android:layout_weight="1"
                android:onClick="onButtTouched"/>
        </RadioGroup>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/submit_text"
            android:textSize="18sp"
            android:background="@color/illiniOrange"
            android:textColor="#FFF"
            android:gravity="center"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
